  - Bugfix #10568: Wake up timeout changing with the number of nodes
  - Add in oar.conf the tag "RUNNER_SLIDING_WINDOW_SIZE": it allows the runner
    to use a sliding window to launch the bipbip processes if
    "DETACH_JOB_FROM_SERVER=1". This feature avoids the overload of the server
    if plenty of jobs have to be launched at the same time.

version 2.4.4:
--------------
  - oar_resource_init: bad awk delimiter. There's a space and if the property
    is the first one then there is not a ','.
  - job suspend: oardo does not exist anymore (long long time ago). Replace it
    with oardodo.
  - oarsub: when an admission rule died micheline returns an integer and not an
    array ref. Now oarsub ends nicely.
  - Monika: add a link on each jobid on the node display area.
  - sshd_config: with nodes with a lot of core, 10 // connections could be too
    few

version 2.4.3:
--------------
  - Hulot module now has customizable keepalive feature
  - Added a hook to launch a healing command when nodes are suspected
    (activate the SUSPECTED_HEALING_EXEC_FILE variable)
  - Bugfix #9995: oaraccouting script doesn't freeze anymore when db is unreachable.
  - Bugfix #9990: prevent from inserting jobs with invalid username (like an empty username)
  - Oarnodecheck improvements: node is not checked if a job is already running
  - New oaradmin option: --auto-offset
  - Feature request #10565: add the possibility to check the aliveness of the
    nodes of a job at the end of this one (pingchecker) 

version 2.4.2:
--------------
  - New "Hulot" module for intelligent and configurable energy saving
  - Bug #9906: fix bad optimization in the gantt lib (so bad scheduling
 
version 2.4.1:
--------------
  - Bug #9038: Security flaw in oarsub --notify option
  - Bug #9601: Cosystem jobs are no more killed when a resource is set to Absent
  - Fixed some packaging bugs
  - API bug fixes in job submission parsing
  - Added standby info into `oarnodes -s` and available_upto info into